fix(style): make customize theme global and fix CustomForm Picker overflow hidden

--- a/src/design/ant/customize-theme/picker.less
+++ b/src/design/ant/customize-theme/picker.less
@@ -43,20 +43,10 @@
       }
     }
 
-    &-dropdown {
-      min-width: 100%;
-    }
-
     &-panel-container {
       padding: 8px;
-      min-width: 100%;
-
-      .ant-picker-panels {
-        min-width: 100%;
-      }
 
       .ant-picker-panel {
-        width: 100%;
         border: none;
       }
 
